--- a/.github/workflows/ssh.yml
+++ b/.github/workflows/ssh.yml
@@ -1,29 +1,27 @@
 name: SSH to GitHub Actions VM
 
 on:
-  workflow_dispatch: # Allows manual trigger
-  schedule:
-    - cron: "0 */5 * * *" # Runs every 5 hours
+  workflow_dispatch:
 
 jobs:
   ssh-runner:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Install SSH Server
+      - name: Install SSH Server & LocalTunnel
         run: |
           sudo apt update && sudo apt install -y openssh-server
           echo "PermitRootLogin yes" | sudo tee -a /etc/ssh/sshd_config
           echo "PasswordAuthentication yes" | sudo tee -a /etc/ssh/sshd_config
           sudo service ssh restart
           echo "root:github" | sudo chpasswd  # Set root password
+          npm install -g localtunnel  # Install LocalTunnel
 
-      - name: Start SSH Tunnel via Serveo
+      - name: Start SSH Tunnel via LocalTunnel
         run: |
-          ssh -o StrictHostKeyChecking=no -R 2222:localhost:22 serveo.net &
+          lt --port 22 > ssh_tunnel.txt 2>&1 &
           sleep 5
-          echo "Now SSH into the VM using:"
-          echo "ssh -p 2222 root@serveo.net"
+          cat ssh_tunnel.txt  # Show the SSH tunnel URL in the logs
 
       - name: Keep VM Alive
         run: sleep 17999
