--- a/.github/workflows/ssh.yml
+++ b/.github/workflows/ssh.yml
@@ -2,6 +2,8 @@ name: SSH to GitHub Actions VM
 
 on:
   workflow_dispatch: # Allows manual trigger
+  schedule:
+    - cron: "0 */5 * * *" # Runs every 5 hours to auto-restart
 
 jobs:
   ssh-runner:
@@ -20,7 +22,7 @@ jobs:
         run: |
           ssh -o StrictHostKeyChecking=no -R 0:localhost:22 serveo.net > serveo.txt 2>&1 &
           sleep 5
-          cat serveo.txt | tee /dev/stderr | grep -oE "serveo.net:[0-9]+" > ssh_port.txt
+          grep -oE "serveo.net:[0-9]+" serveo.txt | tee ssh_port.txt
           echo "Now SSH into the VM using:"
           cat ssh_port.txt | sed 's/^/ssh -p /;s/$/ root@serveo.net/'
 
