--- a/.github/workflows/ssh.yml
+++ b/.github/workflows/ssh.yml
@@ -1,48 +1,48 @@
-name: SSH to GitHub Actions VM
+# name: SSH to GitHub Actions VM
 
-on:
-  workflow_dispatch: # Allows manual trigger
-  schedule:
-    - cron: "0 */5 * * *" # Runs every 5 hours to auto-restart
+# on:
+#   workflow_dispatch: # Allows manual trigger
+#   schedule:
+#     - cron: "0 */5 * * *" # Runs every 5 hours to auto-restart
 
-jobs:
-  ssh-runner:
-    runs-on: ubuntu-latest
+# jobs:
+#   ssh-runner:
+#     runs-on: ubuntu-latest
 
-    steps:
-      - name: Install SSH Server
-        run: |
-          sudo apt update && sudo apt install -y openssh-server
-          echo "PermitRootLogin yes" | sudo tee -a /etc/ssh/sshd_config
-          echo "PasswordAuthentication yes" | sudo tee -a /etc/ssh/sshd_config
-          sudo service ssh restart
-          echo "root:github" | sudo chpasswd  # Set root password
+#     steps:
+#       - name: Install SSH Server
+#         run: |
+#           sudo apt update && sudo apt install -y openssh-server
+#           echo "PermitRootLogin yes" | sudo tee -a /etc/ssh/sshd_config
+#           echo "PasswordAuthentication yes" | sudo tee -a /etc/ssh/sshd_config
+#           sudo service ssh restart
+#           echo "root:github" | sudo chpasswd  # Set root password
 
-      - name: Install Cloudflare Tunnel
-        run: |
-          curl -fsSL https://github.com/cloudflare/cloudflared/releases/latest/download/cloudflared-linux-amd64 -o cloudflared
-          chmod +x cloudflared
-          sudo mv cloudflared /usr/local/bin/
+#       - name: Install Cloudflare Tunnel
+#         run: |
+#           curl -fsSL https://github.com/cloudflare/cloudflared/releases/latest/download/cloudflared-linux-amd64 -o cloudflared
+#           chmod +x cloudflared
+#           sudo mv cloudflared /usr/local/bin/
 
-      - name: Start SSH Tunnel via Cloudflare
-        run: |
-          echo "Starting Cloudflare Tunnel..."
-          cloudflared tunnel --url ssh://localhost:22 > cf_tunnel.log 2>&1 &
-          sleep 10  # Allow time for tunnel initialization
+#       - name: Start SSH Tunnel via Cloudflare
+#         run: |
+#           echo "Starting Cloudflare Tunnel..."
+#           cloudflared tunnel --url ssh://localhost:22 > cf_tunnel.log 2>&1 &
+#           sleep 10  # Allow time for tunnel initialization
 
-          # Retrieve Cloudflare public URL
-          CF_URL=$(grep -oE "https://[a-zA-Z0-9.-]+.trycloudflare.com" cf_tunnel.log)
-          if [[ -z "$CF_URL" ]]; then
-            echo "Error: Failed to retrieve Cloudflare tunnel URL"
-            cat cf_tunnel.log
-            exit 1
-          fi
+#           # Retrieve Cloudflare public URL
+#           CF_URL=$(grep -oE "https://[a-zA-Z0-9.-]+.trycloudflare.com" cf_tunnel.log)
+#           if [[ -z "$CF_URL" ]]; then
+#             echo "Error: Failed to retrieve Cloudflare tunnel URL"
+#             cat cf_tunnel.log
+#             exit 1
+#           fi
 
-          echo "SSH Tunnel Ready!"
-          echo "Use this command to SSH into the VM:"
-          echo "------------------------------------------------------"
-          echo "ssh -o ProxyCommand='cloudflared access ssh --hostname ${CF_URL/https:\/\//}' root@localhost"
-          echo "------------------------------------------------------"
+#           echo "SSH Tunnel Ready!"
+#           echo "Use this command to SSH into the VM:"
+#           echo "------------------------------------------------------"
+#           echo "ssh -o ProxyCommand='cloudflared access ssh --hostname ${CF_URL/https:\/\//}' root@localhost"
+#           echo "------------------------------------------------------"
 
-      - name: Keep VM Alive
-        run: sleep infinity
+#       - name: Keep VM Alive
+#         run: sleep infinity
