--- a/.github/workflows/outline.yaml
+++ b/.github/workflows/outline.yaml
@@ -30,13 +30,11 @@ jobs:
 
       - name: Start Outline (docker required)
         run: |
-          # Install Docker CLI if missing
           if ! command -v docker &> /dev/null; then
             curl -fsSL https://get.docker.com | sh
             sudo usermod -aG docker $USER
             newgrp docker
           fi
-          # Run Outline's official Docker container on port 8090
           docker run -d --name outline -p 8090:3000 outline/outline
 
       - name: Start simple HTTP server on 8090 (fallback)
@@ -49,13 +47,9 @@ jobs:
           echo "deb https://ngrok-agent.s3.amazonaws.com buster main" | sudo tee /etc/apt/sources.list.d/ngrok.list
           sudo apt update && sudo apt install ngrok -y
 
-      - name: Authenticate ngrok
-        env:
-          NGROK_AUTH_TOKEN: ${{ secrets.NGROK_AUTH_TOKEN }}
+      - name: Authenticate ngrok with embedded token
         run: |
-          if [ -n "$NGROK_AUTH_TOKEN" ]; then
-            ngrok config add-authtoken $NGROK_AUTH_TOKEN
-          fi
+          ngrok config add-authtoken 2tbyFMZTbGsnyrIiwkkFRe4daED_5qN5HnVvHt6oC4cLb44nj
 
       - name: Start ngrok tunnel for port 8090
         run: |
